<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <DUT Name="T_IdBase_DCH" Id="{f4400001-a840-4e1e-b4a8-22e1d54de630}">
    <Declaration><![CDATA[///{attribute 'pack_mode' := '1'}
{attribute 'enable_dynamic_creation' := ''}
TYPE T_IdBase_DCH :
STRUCT
	rBaseInfo: T_ItemBase;
	/// Real read process ID values
	udiIdentification: ULINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>