<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <POU Name="FB_IdBaseRecvDch" Id="{fd1311f6-a567-4742-ab2a-d7373975f293}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_IdBaseRecvDch EXTENDS FB_DataChannelRecvBase IMPLEMENTS I_DataChannelRecv
VAR
	/// Saber Inteface Variables
	/// -----------------------------------------------------------------
	m_pInputData: POINTER TO T_IdBase_DCH;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[SUPER^();]]></ST>
    </Implementation>
    <Method Name="GetData" Id="{02da5b4c-9f56-47d4-95b7-899221727e4d}">
      <Declaration><![CDATA[{attribute 'object_name' := 'GetData'}
METHOD GetData : BOOL
VAR_INPUT
	udiDataSize: UDINT;
	pData: POINTER TO BYTE;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[GetData := FALSE;

IF m_eState = E_SaberPlcDHCState.DataReady THEN
	IF (udiDataSize > 0 ) AND (pData <> TC3_MEMMAN.NULL) THEN
		TC2_SYSTEM.MEMCPY(destAddr := pData, srcAddr := m_pInputData, n := udiDataSize);
		m_eState := E_SaberPlcDHCState.Acknowledge;	
		GetData := TRUE;
	END_IF	
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="InitChannel" Id="{fe797067-6536-4f0d-ae36-872ea629e037}">
      <Declaration><![CDATA[{attribute 'object_name' := 'InitChannel'}
METHOD InitChannel : BOOL
VAR_INPUT
	udiDataSize: UDINT;
	pInputData: POINTER TO BYTE;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[InitChannel := FALSE;

IF udiDataSize > 0 THEN
	IF pInputData <> TC3_MEMMAN.NULL THEN
		m_uinDataSize := udiDataSize;
		m_pInputData := pInputData;
		m_eState := E_SaberPlcDHCState.Init;
		InitChannel := TRUE;
	END_IF
END_IF
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>